Throw in -lcrypto, it might be an implicit dependency of the ssl to get SHA256_Init and friends.

--- a/modules/uac_auth/Makefile
+++ b/modules/uac_auth/Makefile
@@ -8,7 +8,7 @@
 include ../../Makefile.defs
 auto_gen=
 NAME=uac_auth.so
-LIBS=
+LIBS=-lcrypto
 
 include ../../Makefile.openssl
 include ../../Makefile.modules
