--- a/modules/auth/Makefile
+++ b/modules/auth/Makefile
@@ -8,7 +8,7 @@
 include ../../Makefile.defs
 auto_gen=
 NAME=auth.so
-LIBS=../../lib/digest_auth/libdigest_auth.a -lcrypto
+LIBS=../../lib/digest_auth/libdigest_auth.a
 
 include ../../Makefile.openssl
 include ../../Makefile.modules
