--- a/.travis.yml
+++ b/.travis.yml
@@ -64,6 +64,16 @@ jobs:
         - sudo apt install software-properties-common
         - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
         - sudo apt-get -y install gcc-9 g++-9
+    - name: "Build with GCC 10 @ Ubuntu 18"
+      dist: bionic
+      compiler: gcc
+      env:
+        - CC=gcc-10 AR=gcc-ar-10 RANLIB=gcc-ranlib-10
+        - GCOV_CMD="gcov-10"
+      before_install:
+        - sudo apt install software-properties-common
+        - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+        - sudo apt-get -y install gcc-10 g++-10
     - name: "Build with Clang 7 @ Ubuntu 18"
       dist: bionic
       compiler: clang
