--- a/.travis.yml
+++ b/.travis.yml
@@ -107,8 +107,12 @@ jobs:
       compiler: gcc
       env:
         - CC_EXTRA_OPTS="-Werror -m32"
+      before_install:
+        - sudo apt-get -y install libc6-dev:i386 libstdc++6-dev:i386
     - name: "Build with Clang 7 @ Ubuntu 18 (32-bit)"
       dist: bionic
       compiler: clang
       env:
         - CC_EXTRA_OPTS="-Werror -m32"
+      before_install:
+        - sudo apt-get -y install libc6-dev:i386 libstdc++6-dev:i386
