--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,8 @@ addons:
       - python-dev
 #      - libjwt-dev
 script: CC_EXTRA_OPTS=${CC_EXTRA_OPTS:-"-Werror"} FASTER=1 NICER=0 make \
-  exclude_modules="db_oracle osp sngtc cachedb_cassandra cachedb_couchbase cachedb_mongodb auth_jwt" all
+  exclude_modules="db_oracle osp sngtc cachedb_cassandra cachedb_couchbase \
+  cachedb_mongodb auth_jwt" ${MAKE_TGT:-"all"}
 notifications:
   irc:
     channels:
@@ -107,6 +108,7 @@ jobs:
       compiler: gcc
       env:
         - CC_EXTRA_OPTS="-Werror -m32"
+        - MAKE_TGT="opensips"
       before_install:
         - sudo apt-get -y install libc6-dev:i386 libstdc++6:i386
     - name: "Build with Clang 7 @ Ubuntu 18 (32-bit)"
@@ -114,5 +116,6 @@ jobs:
       compiler: clang
       env:
         - CC_EXTRA_OPTS="-Werror -m32"
+        - MAKE_TGT="opensips"
       before_install:
         - sudo apt-get -y install libc6-dev:i386 libstdc++6:i386
