--- a/.travis.yml
+++ b/.travis.yml
@@ -103,16 +103,16 @@ jobs:
       dist: bionic
       compiler: clang
       arch: arm64
-    - name: "Build with GCC 7 @ Ubuntu 16 (32-bit)"
-      dist: xenial
+    - name: "Build with GCC 7 @ Ubuntu 18 (32-bit)"
+      dist: bionic
       compiler: gcc
       env:
         - CC_EXTRA_OPTS="-Werror -m32"
         - MAKE_TGT="opensips"
       before_install:
         - sudo apt-get -y install libc6-dev:i386 libstdc++6:i386 libgcc1:i386
-    - name: "Build with Clang 7 @ Ubuntu 16 (32-bit)"
-      dist: xenial
+    - name: "Build with Clang 7 @ Ubuntu 18 (32-bit)"
+      dist: bionic
       compiler: clang
       env:
         - CC_EXTRA_OPTS="-Werror -m32"
