--- a/.travis.yml
+++ b/.travis.yml
@@ -110,7 +110,7 @@ jobs:
         - CC_EXTRA_OPTS="-Werror -m32"
         - MAKE_TGT="opensips"
       before_install:
-        - sudo apt-get -y install libc6-dev:i386 libstdc++6:i386 libgcc1:i386 libx32gcc-7-dev
+        - sudo apt-get -y install libc6-dev:i386 libstdc++6:i386 libgcc1:i386 lib32gcc-7-dev
     - name: "Build with Clang 7 @ Ubuntu 18 (32-bit)"
       dist: bionic
       compiler: clang
@@ -118,4 +118,4 @@ jobs:
         - CC_EXTRA_OPTS="-Werror -m32"
         - MAKE_TGT="opensips"
       before_install:
-        - sudo apt-get -y install libc6-dev:i386 libstdc++6:i386 libgcc1:i386 libx32gcc-7-dev
+        - sudo apt-get -y install libc6-dev:i386 libstdc++6:i386 libgcc1:i386 lib32gcc-7-dev
