--- a/.travis.yml
+++ b/.travis.yml
@@ -103,7 +103,7 @@ jobs:
       dist: bionic
       compiler: clang
       arch: arm64
-    - name: "Build with GCC 7 @ Ubuntu 18 (32-bit)"
+    - name: "Build with GCC 7 @ Ubuntu 18 (i386)"
       dist: bionic
       compiler: gcc
       env:
@@ -111,7 +111,7 @@ jobs:
         - MAKE_TGT="opensips"
       before_install:
         - sudo apt-get -y install libc6-dev:i386 libstdc++6:i386 libgcc1:i386 lib32gcc-7-dev
-    - name: "Build with Clang 7 @ Ubuntu 18 (32-bit)"
+    - name: "Build with Clang 7 @ Ubuntu 18 (i386)"
       dist: bionic
       compiler: clang
       env:
@@ -119,3 +119,11 @@ jobs:
         - MAKE_TGT="opensips"
       before_install:
         - sudo apt-get -y install libc6-dev:i386 libstdc++6:i386 libgcc1:i386 lib32gcc-7-dev
+        - sudo apt-get -y install libsqlite3-dev:i386 libsctp-dev:i386 libradcli-dev:i386 \
+          libhiredis-dev:i386 unixodbc-dev:i386 libconfuse-dev:i386 libmysqlclient-dev:i386 \
+          libexpat1-dev:i386 libxml2-dev:i386 libpq-dev:i386 zlib1g-dev:i386 libperl-dev:i386 \
+          libsnmp-dev:i386 libdb-dev:i386 libldap2-dev:i386 libcurl4-gnutls-dev:i386 \
+          libgeoip-dev:i386 libpcre3-dev:i386 libmemcached-dev:i386 libmicrohttpd-dev:i386 \
+          librabbitmq-dev:i386 liblua5.1-0-dev:i386 libncurses5-dev:i386 libjson-c-dev:i386 \
+          uuid-dev:i386 python-dev:i386
+
