--- a/.travis.yml
+++ b/.travis.yml
@@ -103,7 +103,7 @@ jobs:
       dist: bionic
       compiler: clang
       arch: arm64
-    - name: "Build with GCC 7 @ Ubuntu 18 (i386)"
+    - name: "Build Core with GCC 7 @ Ubuntu 18 (i386)"
       dist: bionic
       compiler: gcc
       env:
@@ -111,7 +111,7 @@ jobs:
         - MAKE_TGT="opensips"
       before_install:
         - sudo apt-get -y install libc6-dev:i386 libstdc++6:i386 libgcc1:i386 lib32gcc-7-dev
-    - name: "Build with Clang 7 @ Ubuntu 18 (i386)"
+    - name: "Build Core with Clang 7 @ Ubuntu 18 (i386)"
       dist: bionic
       compiler: clang
       env:
@@ -119,11 +119,3 @@ jobs:
         - MAKE_TGT="opensips"
       before_install:
         - sudo apt-get -y install libc6-dev:i386 libstdc++6:i386 libgcc1:i386 lib32gcc-7-dev
-        - for pkg in libsqlite3-dev libsctp-dev libradcli-dev \
-          unixodbc-dev libconfuse-dev libmysqlclient-dev \
-          libxml2-dev libpq-dev zlib1g-dev libperl-dev \
-          libdb-dev libldap2-dev libcurl4-gnutls-dev \
-          libpcre3-dev libmemcached-dev libmicrohttpd-dev \
-          liblua5.1-0-dev libncurses5-dev libjson-c-dev \
-          python-dev; do echo "Installing ${pkg}:i386"; sudo apt-get -y install "${pkg}:i386"; done
-
