--- a/.travis.yml
+++ b/.travis.yml
@@ -48,6 +48,68 @@ notifications:
     on_failure: always
 jobs:
   include:
+    - name: "Build with GCC 7 @ Ubuntu 16"
+      dist: xenial
+      compiler: gcc
+    - name: "Build with Clang 7 @ Ubuntu 16"
+      dist: xenial
+      compiler: clang
+    - name: "Build with GCC 7 @ Ubuntu 18"
+      compiler: gcc
+    - name: "Build with GCC 9 @ Ubuntu 18"
+      compiler: gcc
+      env:
+        - CC=gcc-9 AR=gcc-ar-9 RANLIB=gcc-ranlib-9
+        - GCOV_CMD="gcov-9"
+      before_install:
+        - sudo apt install software-properties-common
+        - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+        - sudo apt-get -y install gcc-9 g++-9
+    - name: "Build with GCC 10 @ Ubuntu 18"
+      compiler: gcc
+      env:
+        - CC=gcc-10 AR=gcc-ar-10 RANLIB=gcc-ranlib-10
+        - GCOV_CMD="gcov-10"
+      before_install:
+        - sudo apt install software-properties-common
+        - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+        - sudo apt-get -y install gcc-10 g++-10
+    - name: "Build with Clang 7 @ Ubuntu 18"
+      compiler: clang
+    - name: "Build with Clang 9 @ Ubuntu 18"
+      compiler: clang
+      env:
+        - CC=clang-9 AR=llvm-ar-9 RANLIB=llvm-ranlib-9
+        - GCOV_CMD="llvm-cov-9 gcov"
+      before_install:
+        - sudo apt-get -y install clang-9 llvm-9-dev libc++-9-dev libc++abi-9-dev
+    - name: "Build with Clang 10 @ Ubuntu 18"
+      compiler: clang
+      env:
+        - CC=clang-10 AR=llvm-ar-10 RANLIB=llvm-ranlib-10
+        - GCOV_CMD="llvm-cov-10 gcov"
+      before_install:
+        - sudo apt-get -y install clang-10 llvm-10-dev libc++-10-dev libc++abi-10-dev
+    - name: "Build with GCC 7 @ Ubuntu 18 (ARM)"
+      compiler: gcc
+      arch: arm64
+    - name: "Build with Clang 7 @ Ubuntu 18 (ARM)"
+      compiler: clang
+      arch: arm64
+    - name: "Build Core with GCC 7 @ Ubuntu 18 (i386)"
+      compiler: gcc
+      env:
+        - CC_EXTRA_OPTS="-Werror -m32"
+        - MAKE_TGT="opensips"
+      before_install:
+        - sudo apt-get -y install libc6-dev:i386 libstdc++6:i386 lib32gcc-7-dev
+    - name: "Build Core with Clang 7 @ Ubuntu 18 (i386)"
+      compiler: clang
+      env:
+        - CC_EXTRA_OPTS="-Werror -m32"
+        - MAKE_TGT="opensips"
+      before_install:
+        - sudo apt-get -y install libc6-dev:i386 libstdc++6:i386 lib32gcc-7-dev
     - name: "Build Core with GCC 7 @ Ubuntu 18 (MIPS64)"
       compiler: gcc
       env:
