--- a/Makefile.rules
+++ b/Makefile.rules
@@ -39,8 +39,21 @@ $(NAME): $(objs) $(extra_objs) $(misclibs) $(ALLDEP)
 ifeq (,$(FASTER))
 	@echo "Linking $(NAME)"
 endif
+ifneq (,$(filter main.o,$(objs)))
+	$(TOP_SRCDIR)/scripts/build/linkstatic.sh $(filter-out main.o, $(objs)) $(extra_objs) -o lib$(NAME).a
+	$(LD) $(LDFLAGS) main.o lib$(NAME).a $(misclibs) $(LIBS) $(TWEAK_LIBS) -o $(NAME)
+else
 	$(Q)$(LD) $(LDFLAGS) $(objs) $(extra_objs) $(misclibs) $(LIBS) $(TWEAK_LIBS) -o $(NAME)
+endif
 
+test_core_objs = cachedb/test/test_backends.o mem/test/test_malloc.o \
+ parser/test/test_oob.o  parser/test/test_parse_authenticate_body.o \
+ parser/test/test_parse_fcaps.o  parser/test/test_parser.o \
+ parser/test/test_parse_qop.o test/unit_tests.o test/ut.o \
+ lib/test/test_csv.o
+
+$(NAME)_test: $(NAME) $(test_core_objs)
+	$(LD) $(LDFLAGS) $(test_core_objs) lib$(NAME).a -ltap -o $@
 
 main.o: main.c $(ALLDEP) $(NEWREVISION)
 ifeq (,$(FASTER))
