Run opensips_test after success.

--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,8 @@ script:
   - CC_EXTRA_OPTS=${CC_EXTRA_OPTS:-"-Werror"} FASTER=1 NICER=0 make \
       exclude_modules="db_oracle osp sngtc cachedb_cassandra cachedb_couchbase \
       cachedb_mongodb auth_jwt" ${MAKE_TGT:-all opensips_test}
+after_success:
+  - ./opensips_test
 notifications:
   irc:
     channels:
