Correct name: ARM -> ARM64.

--- a/.travis.yml
+++ b/.travis.yml
@@ -94,10 +94,10 @@ jobs:
         - GCOV_CMD="llvm-cov-10 gcov"
       before_install:
         - sudo apt-get -y install clang-10 llvm-10-dev libc++-10-dev libc++abi-10-dev
-    - name: "Build with GCC 7 @ Ubuntu 18 (ARM)"
+    - name: "Build with GCC 7 @ Ubuntu 18 (ARM64)"
       compiler: gcc
       arch: arm64
-    - name: "Build with Clang 7 @ Ubuntu 18 (ARM)"
+    - name: "Build with Clang 7 @ Ubuntu 18 (ARM64)"
       compiler: clang
       arch: arm64
     - name: "Build Core with GCC 7 @ Ubuntu 18 (i386)"
