Add opensips_test into MIPS64 targets.

--- a/.travis.yml
+++ b/.travis.yml
@@ -118,6 +118,6 @@ jobs:
       compiler: gcc
       env:
         - CC=mips64-linux-gnuabi64-gcc AR=mips64-linux-gnuabi64-ar RANLIB=mips64-linux-gnuabi64-ranlib
-        - MAKE_TGT="opensips"
+        - MAKE_TGT="opensips opensips_test"
       before_install:
         - sudo apt-get -y install gcc-mips64-linux-gnuabi64 libc-dev-mips64-cross qemu-user-static
