--- a/.travis.yml
+++ b/.travis.yml
@@ -36,9 +36,8 @@ addons:
 before_script:
   - sh scripts/build/setup_tap.sh
 script:
-  - CC_EXTRA_OPTS=${CC_EXTRA_OPTS:-"-Werror -Idist/libtap"} \
-      make LD_EXTRA_OPTS=-Ldist/libtap \
-      FASTER=1 NICER=0 \
+  - CC_EXTRA_OPTS=${CC_EXTRA_OPTS:-"-Werror -Idist/libtap"} make \
+      LD_EXTRA_OPTS=-Ldist/libtap FASTER=1 NICER=0 \
       exclude_modules="db_oracle osp sngtc cachedb_cassandra cachedb_couchbase \
       cachedb_mongodb auth_jwt" ${MAKE_TGT:-all opensips_test}
   - set -e; if [ -e opensips_test ]; then ./opensips_test; fi
