--- a/lib/digest_auth/Makefile
+++ b/lib/digest_auth/Makefile
@@ -8,11 +8,11 @@ CPP_CMD?=cpp
 
 SHA_256_SUPPORT:= $(shell printf '\#define SHA256_Init(x) \
 	_TEST_P_A_S_S_E_D_()\n\#include <openssl/sha.h>\n' \
-	| $(CPP_CMD) $(DEFS) | grep -q _TEST_P_A_S_S_E_D_ && echo yes)
+	| $(CPP_CMD) $(DEFS) 2>/dev/null | grep -q _TEST_P_A_S_S_E_D_ && echo yes)
 
 SHA_512_256_SUPPORT:= $(shell printf '\#define EVP_sha512_256(x) \
 	_TEST_P_A_S_S_E_D_()\n\#include <openssl/evp.h>\n' \
-	| $(CPP_CMD) $(DEFS) | grep -q _TEST_P_A_S_S_E_D_ && echo yes)
+	| $(CPP_CMD) $(DEFS) 2>/dev/null | grep -q _TEST_P_A_S_S_E_D_ && echo yes)
 
 ifeq ($(SHA_256_SUPPORT),yes)
 	DEFS+=-DSHA_256_ENABLE
