--- a/lib/digest_auth/Makefile
+++ b/lib/digest_auth/Makefile
@@ -6,6 +6,10 @@ LIBS=
 
 CPP_CMD?=cpp
 
+AES_SUPPORT:= $(shell printf '\#define EVP_CIPHER_CTX_new(x) \
+	_TEST_P_A_S_S_E_D_()\n\#include <openssl/evp.h>\n' \
+	| $(CPP_CMD) $(DEFS) 2>/dev/null | grep -q _TEST_P_A_S_S_E_D_ && echo yes)
+
 SHA_256_SUPPORT:= $(shell printf '\#define SHA256_Init(x) \
 	_TEST_P_A_S_S_E_D_()\n\#include <openssl/sha.h>\n' \
 	| $(CPP_CMD) $(DEFS) 2>/dev/null | grep -q _TEST_P_A_S_S_E_D_ && echo yes)
@@ -13,6 +17,10 @@ SHA_256_SUPPORT:= $(shell printf '\#define SHA256_Init(x) \
 SHA_512_256_SUPPORT:= $(shell printf '\#define EVP_sha512_256(x) \
 	_TEST_P_A_S_S_E_D_()\n\#include <openssl/evp.h>\n' \
 	| $(CPP_CMD) $(DEFS) 2>/dev/null | grep -q _TEST_P_A_S_S_E_D_ && echo yes)
+
+ifneq ($(AES_SUPPORT),yes)
+	exclude_files+=$(wildcard *nonce.c)
+endif
 
 ifeq ($(SHA_256_SUPPORT),yes)
 	DEFS+=-DSHA_256_ENABLE
