--- a/.travis.yml
+++ b/.travis.yml
@@ -37,8 +37,8 @@ before_script:
   - sh scripts/build/setup_tap.sh
 script:
   - CC_EXTRA_OPTS=${CC_EXTRA_OPTS:-"-Werror -Idist/libtap"}; \
-      LD_EXTRA_OPTS=${LD_EXTRA_OPTS:-"-Ldist/libtap -L/usr/local/lib -lssl -lcrypto"}; \
-      make CC_EXTRA_OPTS="${CC_EXTRA_OPTS}" LD_EXTRA_OPTS="${LD_EXTRA_OPTS}" \
+     LD_EXTRA_OPTS=${LD_EXTRA_OPTS:-"-Ldist/libtap -L/usr/local/lib -lssl -lcrypto"}; make \
+      CC_EXTRA_OPTS="${CC_EXTRA_OPTS}" LD_EXTRA_OPTS="${LD_EXTRA_OPTS}" \
       FASTER=1 NICER=0 \
       exclude_modules="db_oracle osp sngtc cachedb_cassandra cachedb_couchbase \
       cachedb_mongodb auth_jwt" ${MAKE_TGT:-all opensips_test}
