--- a/.travis.yml
+++ b/.travis.yml
@@ -36,12 +36,7 @@ addons:
 before_script:
   - sh scripts/build/setup_tap.sh
 script:
-  - CC_EXTRA_OPTS=${CC_EXTRA_OPTS:-"-Werror -Idist/libtap"}; \
-     LD_EXTRA_OPTS=${LD_EXTRA_OPTS:-"-Ldist/libtap -L/usr/local/lib -lssl -lcrypto"}; make \
-      CC_EXTRA_OPTS="${CC_EXTRA_OPTS}" LD_EXTRA_OPTS="${LD_EXTRA_OPTS}" \
-      FASTER=1 NICER=0 \
-      exclude_modules="db_oracle osp sngtc cachedb_cassandra cachedb_couchbase \
-      cachedb_mongodb auth_jwt" ${MAKE_TGT:-all opensips_test}
+  - ./scripts/build/travis_build.sh ${MAKE_TGT:-all opensips_test}
   - set -e; if [ -e opensips_test ]; then ./opensips_test 2>opensips_test.elog; fi
 notifications:
   irc:
