Revert "Don't link libdigest_auth.a directly, use -L + -l."
This reverts commit cc94dac29abb3f48d2af6fdc71e0b881462ba126.

--- a/Makefile.rules
+++ b/Makefile.rules
@@ -49,7 +49,7 @@ endif
 $(NAME)_test: $(NAME) $(test_objs)
 	$(MAKE) -j -C $(TOP_SRCDIR)/lib/digest_auth
 	$(LD) $(LDFLAGS) $(test_objs) lib$(NAME).a $(LIBS) $(TWEAK_LIBS) -ltap \
-	    -L$(TOP_SRCDIR)/lib/digest_auth -ldigest_auth -o $@
+	    $(TOP_SRCDIR)/lib/digest_auth/libdigest_auth.a -o $@
 
 main.o: main.c $(ALLDEP) $(NEWREVISION)
 ifeq (,$(FASTER))
