--- a/Makefile.rules
+++ b/Makefile.rules
@@ -48,8 +48,8 @@ endif
 
 $(NAME)_test: $(NAME) $(test_objs)
 	$(MAKE) -j -C $(TOP_SRCDIR)/lib/digest_auth
-	$(LD) $(TOP_SRCDIR)/lib/digest_auth/libdigest_auth.a $(LDFLAGS) \
-	    $(test_objs) lib$(NAME).a $(LIBS) $(TWEAK_LIBS) -ltap -o $@
+	$(LD) $(test_objs) $(TOP_SRCDIR)/lib/digest_auth/libdigest_auth.a $(LDFLAGS) \
+	    lib$(NAME).a $(LIBS) $(TWEAK_LIBS) -ltap -o $@
 
 main.o: main.c $(ALLDEP) $(NEWREVISION)
 ifeq (,$(FASTER))
