--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ${{ matrix.os }}
     env:
-      CC: ${{ matrix.compiler }}
+      COMPILER: ${{ matrix.compiler }}
 
     strategy:
       matrix:
