--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,10 @@ jobs:
             os: ubuntu-18.04
           - compiler: 'gcc-mips64-cross'
             os: ubuntu-18.04
+          - compiler: 'gcc-arm32-cross'
+            os: ubuntu-18.04
+          - compiler: 'gcc-arm64-cross'
+            os: ubuntu-18.04
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
