Add libmaxminddb-dev, which seems to be missing on ubuntu-20.

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,7 @@ addons:
       - libjson-c-dev
       - uuid-dev
       - python-dev
+      - libmaxminddb-dev
 #      - libjwt-dev
 script: CC_EXTRA_OPTS=${CC_EXTRA_OPTS:-"-Werror"} FASTER=1 NICER=0 make \
   exclude_modules="db_oracle osp sngtc cachedb_cassandra cachedb_couchbase \
