--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,10 @@ jobs:
         os: [ubuntu-20.04, ubuntu-18.04]
         compiler: ['gcc', 'clang', 'gcc-9', 'gcc-10', 'clang-9', 'clang-10']
         include:
+          - compiler: 'gcc'
+            os: ubuntu-16.04
+          - compiler: 'clang'
+            os: ubuntu-16.04
           - compiler: 'gcc-i386-cross'
             os: ubuntu-18.04
           - compiler: 'clang-i386-cross'
