--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,7 @@ jobs:
         run: sh -x scripts/build/do_build.sh
 
       - name: Notify slack fail
-        if: failure()
+        if: failure() && github.repository == 'OpenSIPS/opensips'
         env:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
         uses: voxmedia/github-action-slack-notify-build@v1
