--- a/Makefile.defs
+++ b/Makefile.defs
@@ -249,7 +249,7 @@ predef_macros:=$(shell $(CC) -dM -E -x c $(CC_EXTRA_OPTS) $(extra_defs) \
 					$(CFLAGS) /dev/null)
 stdatomics_support:=$(shell printf '\43include <stdatomic.h>' | $(CC) -dM -E -x c $(CC_EXTRA_OPTS) $(extra_defs) \
 					$(CFLAGS) /dev/stdin >/dev/null 2>/dev/null && printf '\55DHAVE_STDATOMIC')
-generics_support:=$(shell printf '\43include <unistd.h>\n\43define m(x) _Generic((x),default:sleep)(x)\nvoid main(void){m(0);}\n' | \
+generics_support:=$(shell printf '\43include <unistd.h>\n\43define m(x) _Generic((x),default:sleep)(x)\nint main(void){(int)m(0);}\n' | \
 	$(CC) -dM -c -x c $(CC_EXTRA_OPTS) $(extra_defs) \
 					$(CFLAGS) /dev/stdin >/dev/null 2>/dev/null && printf '\55DHAVE_GENERICS')
 DEFS+=$(stdatomics_support) $(generics_support)
