Make usable OOB.

--- a/modules/cfgutils/test/opensips.cfg
+++ b/modules/cfgutils/test/opensips.cfg
@@ -12,4 +12,4 @@ mpath = "modules/"
 loadmodule "mi_fifo.so"
 loadmodule "proto_udp.so"
 
-loadmodule "cfgutils.so"
+loadmodule "cfgutils/cfgutils_unittests.so"
