--- a/modules/registrar/test/opensips.cfg
+++ b/modules/registrar/test/opensips.cfg
@@ -16,17 +16,17 @@ listen = udp:localhost:5059
 mpath = "modules/"
 
 loadmodule "proto_udp.so"
-loadmodule "mi_fifo.so"
+loadmodule "mi_fifo/mi_fifo.so"
 
 ################################
 
-loadmodule "tm.so"
+loadmodule "tm/tm.so"
 modparam("tm", "auto_100trying", 0)
 
-loadmodule "signaling.so"
-loadmodule "registrar.so"
-loadmodule "event_route.so"
-loadmodule "event_routing.so"
+loadmodule "signaling/signaling.so"
+loadmodule "registrar/registrar_unittests.so"
+loadmodule "event_route/event_route.so"
+loadmodule "event_routing/event_routing.so"
 
 modparam("registrar", "pn_enable", true)
 modparam("registrar", "pn_providers", "fcm, apns")
@@ -35,7 +35,7 @@ modparam("registrar", "pn_trigger_interval", 50)
 modparam("registrar", "pn_skip_pn_interval", 0)
 modparam("registrar", "pn_refresh_timeout", 2)
 
-loadmodule "usrloc.so"
+loadmodule "usrloc/usrloc.so"
 modparam("usrloc", "contact_refresh_timer", true)
 
 route {
